--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="../../e-commerce/frontend/src/main.jsx" ></script>
+  <script type="module" src="/opt/build/repo/frontend/index.html" ></script>
 
 </body>
 
