--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,8 +13,7 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/opt/build/repo/frontend/bundle.js"></script>
-
+  <script type="module" src="/frontend/src/main.jsx" ></script>
 
 </body>
 
